--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,9 @@
 
 body {
   min-height: 100vh;
-  background-color: #282c34;
+  background-color: #A2D2FF;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family:'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
